<resources>
    <string name="app_name">302.AI</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="chat_title">NewChat</string>
    <string name="hide_title">Incognito session</string>
    <string name="front_page_message">Hi,are you ready to explore the world with me?</string>
    <string name="chat_edit_message">Ask me any questions...</string>
    <string name="front_page_bottom_message">AI can make mistakes, please consider verifying important information.</string>
    <string name="voice_message">Hold to speak</string>
    <string name="cancel_message">Cancel</string>
    <string name="delete_message">Delete</string>
    <string name="edit_message">Edit</string>
    <string name="send_message">Send</string>
    <string name="resource_library">Resource library</string>
    <string name="today_message">Today</string>
    <string name="yesterday_message">Yesterday</string>
    <string name="earlier_message">Earlier</string>
    <string name="edit_search_history_message">Please enter search content</string>
    <string name="voice_mike_message">Speech recognition</string>
    <string name="voice_short_can_not_message">The voice input is too short. Please long press the microphone icon</string>
    <string name="open_hide_chat_toast_message">Switched to Incognito session</string>
    <string name="close_hide_chat_toast_message">Incognito session closed</string>
    <string name="plase_wait_back_delect_toast_message">Please wait for the reply to be completed before deleting</string>
    <string name="plase_first_enter_question_toast_message">Please enter a question first</string>
    <string name="can_not_send_empty_toast_message">Cannot send empty content</string>
    <string name="parsing_image_toast_message">Parsing now, please wait</string>
    <string name="network_error_toast_message">Network Error:</string>
    <string name="already_new_session_toast_message">This is already a new session, thank you</string>
    <string name="cancel_rename_toast_message">Cancel Rename</string>
    <string name="screenshot_save_toast_message">The screenshot has been saved to the album, thank you</string>
    <string name="screenshot_can_not_toast_message">Please talk to the big model first and then take a screenshot, thank you</string>
    <string name="install_file_mangager_toast_message">Please install a file manager</string>
    <string name="again_later_toast_message">Please try again later</string>
    <string name="cancel_feedback_toast_message">Cancel Feedback</string>
    <string name="rename_title_message">Rename</string>
    <string name="edit_new_name_hint_message">Please edit the new name</string>
    <string name="pormpt_hint_message">   Please fill in a custom prompt word other than the one above</string>
    <string name="prompt_help_title_message">System prompt word help</string>
    <string name="prompt_help_message">System prompts are instructions used to guide the AI is conversational style and role. By setting system prompts, you can ensure that the AI responds with a specific identity, tone, or behavior throughout the conversation. For example, system prompts can be used to allow the AI to play the role of teacher, assistant, or expert, better meeting the needs of different scenarios.</string>
    <string name="select_expression_title_message">Please select an expression</string>
    <string name="language_en_message">English</string>
    <string name="language_ch_message">Chinese</string>
    <string name="language_ja_message">Japanese</string>
    <string name="good_toast_message">Like</string>
    <string name="cancel_good_toast_message">Cancel Like</string>
    <string name="bad_toast_message">Dislike</string>
    <string name="again_toast_message">Retry</string>
    <string name="pre_code_toast_message">Preview Code</string>
    <string name="screenshot_toast_message">Screenshot</string>
    <string name="select_text_toast_message">Select Text</string>
    <string name="copy_toast_message">Copy</string>
    <string name="user_edit_toast_message">Edit</string>
    <string name="open_file_fail_toast_message">No application found to open this document</string>
    <string name="open_file_toast_message">Select an application to open the document</string>
    <string name="select_file_dialog_title">Please select file</string>
    <string name="archive_dialog_message">from the archive</string>
    <string name="camera_dialog_message">Camera</string>
    <string name="push_picture_dialog_message">Upload photo</string>
    <string name="appendix_dialog_message">Attachment</string>
    <string name="select_function_dialog_title">Function Selection</string>
    <string name="web_think_dialog_message">Web Search</string>
    <string name="deep_think_dialog_message">Deep Thinking</string>
    <string name="think_model_dialog_message">Thinking Model</string>
    <string name="mcp_dialog_message">MCP1</string>
    <string name="login_message">A pay-as-you-go enterprise-grade AI platform</string>
    <string name="login_button_message">Login now</string>
    <string name="setting_title_message">Settings</string>
    <string name="setting_account_message">302.AI ID</string>
    <string name="setting_balance_message">Balance</string>
    <string name="setting_consumption_details_message">Consumption details</string>
    <string name="setting_top_up_message">Top up</string>
    <string name="setting_language_message">Language</string>
    <string name="setting_theme_message">Theme</string>
    <string name="setting_preference_message">Preferences</string>
    <string name="setting_application_message">Application</string>
    <string name="setting_general_message">General</string>
    <string name="setting_manager_message">Manager</string>
    <string name="setting_model_manager_message">Model management</string>
    <string name="setting_model_manager_delete_fail_toast_message">The model list cannot be empty</string>
    <string name="setting_tools_manager_message">MCP services</string>
    <string name="setting_my_archive_manager_message">Archive</string>
    <string name="setting_my_kb_manager_message">Knowledge Base</string>
    <string name="setting_about_message">About</string>
    <string name="setting_announcement_message">Announcement</string>
    <string name="setting_contact_us_message">Contact Us</string>
    <string name="setting_version_information_message">Version Information</string>
    <string name="setting_service_agreement_message">Service Agreement</string>
    <string name="setting_log_out_message">Logout</string>
    <string name="setting_clear_chat_message">Clear all session logs</string>
    <string name="setting_light_message">Light</string>
    <string name="setting_night_message">Dark</string>
    <string name="setting_system_message">Follow the system</string>
    <string name="announcement_details_title_message">Announcement details</string>
    <string name="announcement_details_one_message">302.AI sincerely invites you to join the AI technology exchange group</string>
    <string name="announcement_details_two_message">To further promote communication and collaboration in the AI field, 302.AI has created a WeChat group. Everyone is welcome to scan the QR code to join! \n\n\nIn the group,\n you can:\n - Get the latest AI news and technology updates \n- Seek technical support and solutions \n- Exchange experiences and insights with AI enthusiasts and professionals, and participate in various AI-related discussions and events.\n\n\n Due to WeChat restrictions, please use WeChat to scan the QR code or search for WeChat ID: wx_302A1 to add a 302.AI account manager, who will then add you to the group. 302.AI looks forward to your joining us to build an active and supportive AI community!</string>
    <string name="privacy_policy_message">Privacy Policy</string>
    <string name="terms_message">Terms of use</string>
    <string name="personal_center_title_message">Personal Data</string>
    <string name="personal_user_name_message">username</string>
    <string name="personal_change_password_message">Change Password</string>
    <string name="personal_cancel_account_message">Cancel account</string>
    <string name="personal_upload_image_toast_message">Uploading pictures, please wait</string>
    <string name="personal_select_image_message">Select an avatar</string>
    <string name="change_password_title_message">Change Password</string>
    <string name="change_password_old_message">Old Password</string>
    <string name="change_password_new_message">New Password</string>
    <string name="change_password_new_again_message">Confirm New Password</string>
    <string name="change_password_old_hint_message">Please enter your old password</string>
    <string name="change_password_new_hint_message">Please enter your new password</string>
    <string name="change_password_new_again_hint_message">Please enter your new password again</string>
    <string name="change_password_save_message">Change Password</string>
    <string name="change_password_fail_toast_message">The password you entered is incorrect</string>
    <string name="change_password_not_same_toast_message">The two passwords you entered do not match</string>
    <string name="change_password_sucess_toast_message">Password changed successfully</string>
    <string name="change_password_failed_toast_message">Password change failed</string>
    <string name="delete_user_title_message">Cancellation Instructions</string>
    <string name="delete_user_message">After canceling your account, all information will disappear permanently. Please operate with caution.</string>
    <string name="delete_user_cancel_message">Cancel account cancellation</string>
    <string name="delete_user_failed_message">Account deletion failed</string>
    <string name="change_name_failed_message">Username change failed</string>
    <string name="change_name_sucess_message">Username change successful</string>
    <string name="version_now_message">Current version</string>
    <string name="version_new_message">Updated version</string>
    <string name="version_title_message">Version Information</string>
    <string name="back_login_message">Back to login</string>
    <string name="setting_add_model_title_message">Add Model</string>
    <string name="setting_edit_model_title_message">Edit Model</string>
    <string name="setting_add_model_id_message">Model ID</string>
    <string name="close_message">Close</string>
    <string name="feed_back_title_message">Help us make it better</string>
    <string name="feed_back_bottom_message">Every piece of feedback you provide will help improve the AI. Thank you for your continued progress.</string>
    <string name="feed_back_content_issues_message">Content quality issues</string>
    <string name="feed_back_logical_issues_message">Logical flaws</string>
    <string name="feed_back_expression_issues_message">Unclear expression</string>
    <string name="feed_back_answer_issues_message">Irrelevant answers</string>
    <string name="feed_back_other_issues_message">Additional information</string>
    <string name="feed_back_edit_issues_message">Tell us what you think～</string>
    <string name="feed_back_push_issues_message">Submit feedback</string>
    <string name="proxy_message1">Read and Agree to</string>
    <string name="proxy_message2">and</string>
    <string name="user_terms">UTs</string>
    <string name="privacy_agreement">PAs</string>
    <string name="phone_msg">Phone number</string>
    <string name="vc_msg">Verification Code</string>
    <string name="remember_password">RMP</string>
    <string name="forget_password">forget the password?</string>
    <string name="login">login</string>
    <string name="please_verify_code">Please enter the VC</string>
    <string name="get_verify_code">Get verification code</string>
    <string name="sure">sure</string>
</resources>