<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="26dp"
    android:layout_marginRight="26dp"
    android:padding="14dp"
    android:background="@drawable/shape_line_r2_bg_302ai_feed_back"> <!-- 可自定义背景形状、颜色 -->

    <!-- 标题 -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feed_back_title_message"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/icon_love"
        android:layout_marginLeft="2dp"
        app:layout_constraintLeft_toRightOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"/>

    <ImageView
        android:id="@+id/btnCancel"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/icon_new_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"/>

    <TextView
        android:id="@+id/tvTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feed_back_bottom_message"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        android:textColor="@color/textDialogColor"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"
        app:alignItems="flex_start">
        <TextView
            android:id="@+id/tvBad1"
            android:background="@drawable/shape_select_site_bg_write_feed_back_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_back_content_issues_message"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <TextView
            android:id="@+id/tvBad2"
            android:background="@drawable/shape_select_site_bg_write_feed_back_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_back_logical_issues_message"
            android:textSize="12sp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <TextView
            android:id="@+id/tvBad3"
            android:background="@drawable/shape_select_site_bg_write_feed_back_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_back_expression_issues_message"
            android:textSize="12sp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </com.google.android.flexbox.FlexboxLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tvBad4"
            android:background="@drawable/shape_select_site_bg_write_feed_back_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_back_answer_issues_message"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <TextView
            android:id="@+id/tvBad5"
            android:background="@drawable/shape_select_site_bg_write_feed_back_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_back_other_issues_message"
            android:textSize="12sp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="284dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_select_site_bg_gray_dialog_feed_back_edit"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <!-- 输入框 -->
<!--        android:inputType="textMultiLine"自动换行，如果是text只能有一行-->
        <EditText
            android:id="@+id/etFeedBck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feed_back_edit_issues_message"
            android:background="@null"
            android:inputType="textMultiLine"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/textSettingColor4"
            android:textSize="14sp"
            android:paddingLeft="12dp"
            />
    </LinearLayout>


    <!-- 按钮容器，用于放“取消”“保存” -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/shape_select_site_bg_purple_line"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:textColor="@color/onlyWhite"
        android:textSize="16sp"
        android:text="@string/feed_back_push_issues_message" />

</androidx.constraintlayout.widget.ConstraintLayout>