<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="2dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:background="@drawable/shape_select_site_bg_write_new"> <!-- 可自定义背景形状、颜色 -->

    <LinearLayout
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/icon_warn"/>
        <!-- 标题 -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_user_title_message"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>


    <!-- 输入框 -->
    <TextView
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="8dp"
        android:text="@string/delete_user_message"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lineDialog"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>
    <!-- 按钮容器，用于放“取消”“保存” -->
    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:text="@string/cancel_message"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@color/itemBgColor"
            android:layout_weight="1"
            />

        <View
            android:id="@+id/line2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/lineDialog"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/btnSave"
            android:background="@color/itemBgColor"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/sure" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>